<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/config_layout_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundListActivity">

    <RelativeLayout
        android:id="@+id/config_layout_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_background">

        <Button
            android:id="@+id/config_layout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_layout_desc_4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/main_button"
            android:onClick="onClickCreate"
            android:text="@string/btn_config"
            android:textColor="@color/colorTextButton"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/config_layout_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_layout_tv"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/config_layout_tv_desc_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_layout_spn"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/config_body_descr_1"
            android:textAlignment="viewStart"
            android:textColor="@color/colorInfoText"
            android:textSize="18sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/config_layout_desc_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/config_layout_spn"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/config_body_descr_2"
            android:textAlignment="viewStart"
            android:textColor="@color/colorInfoText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/config_layout_desc_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_layout_desc_2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/config_body_descr_3"
            android:textAlignment="viewStart"
            android:textColor="@color/colorInfoText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/config_layout_desc_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_layout_desc_2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/config_body_descr_4"
            android:textAlignment="viewStart"
            android:textColor="@color/colorInfoText"
            android:textSize="18sp"
            tools:layout_below="@id/config_layout_desc_3" />

        <TextView
            android:id="@+id/config_layout_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/config_head"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorTextBlack" />

        <TextView
            android:id="@+id/config_layout_desc_tv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/config_layout_btn"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/autor_group"
            android:textAlignment="center"
            android:textColor="@color/colorInfoText" />
    </RelativeLayout>

</ScrollView>