<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_help_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundListActivity">

    <RelativeLayout
        android:id="@+id/activity_help_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_background">

        <TextView
            android:id="@+id/activity_help_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/config_head"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorTextBlack" />

        <View
            android:id="@+id/activity_help_view_line_top"
            style="@style/Divider"
            android:layout_below="@id/activity_help_tv"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp" />


        <TextView
            android:id="@+id/activity_help_desc_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_help_tv"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/config_body_descr_2"
            android:textAlignment="viewStart"
            android:textColor="@color/colorInfoText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity_help_desc_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_help_desc_2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/config_body_descr_3"
            android:textAlignment="viewStart"
            android:textColor="@color/colorInfoText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity_help_desc_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_help_desc_3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/config_body_descr_4"
            android:textAlignment="viewStart"
            android:textColor="@color/colorInfoText"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/activity_help_desc_tv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/autor_group"
            android:textAlignment="center"
            android:textColor="@color/colorInfoText" />
    </RelativeLayout>

</ScrollView>